--- a/聊天系统/css/Main.css
+++ b/聊天系统/css/Main.css
@@ -52,7 +52,7 @@ ul, li {
         height: 0;
         transition: .3s;
         background-color: #f9f8f8;
-        right: 0;
+        right: .6rem;
         top: .9rem; }
         .out .main .top .hidden_rigth ul {
           display: flex;
@@ -61,7 +61,8 @@ ul, li {
           align-items: flex-start;
           height: 100%;
           padding: 0 .2rem;
-          width: 2rem; }
+          width: 100%;
+          overflow: hidden; }
           .out .main .top .hidden_rigth ul li {
             display: flex;
             /* justify-content: space-around; */
@@ -112,7 +113,8 @@ ul, li {
               border: 1px solid white; }
       .out .main .top .hidden_rigth_display {
         width: 2rem;
-        height: 2.5rem; }
+        height: 2.5rem;
+        right: 0; }
       .out .main .top .hidden_rigth:after {
         content: "";
         position: absolute;
@@ -135,5 +137,28 @@ ul, li {
     .out .main .search::placeholder {
       font-size: 14px;
       line-height: 1.5em; }
+    .out .main .notice_area {
+      width: 100%;
+      padding: .2rem .1rem;
+      background-color: #FFFFFF;
+      box-sizing: border-box; }
+      .out .main .notice_area .notice_infomation {
+        width: 100%;
+        height: .5rem;
+        display: flex; }
+        .out .main .notice_area .notice_infomation > img {
+          width: .5rem;
+          height: .5rem;
+          border-radius: 50%; }
+        .out .main .notice_area .notice_infomation .notice_left {
+          flex: 1;
+          padding: 0 .1rem; }
+          .out .main .notice_area .notice_infomation .notice_left .notice_information {
+            display: flex;
+            justify-content: space-between; }
+            .out .main .notice_area .notice_infomation .notice_left .notice_information .notice_container {
+              font-size: 14px; }
+            .out .main .notice_area .notice_infomation .notice_left .notice_information .send_time {
+              font-size: 12px; }
 
-/*# sourceMappingURL=%E9%A6%96%E9%A1%B5.css.map */
+/*# sourceMappingURL=Main.css.map */
