--- a/聊天系统/css/Main.scss
+++ b/聊天系统/css/Main.scss
@@ -67,7 +67,7 @@ ul,li{
         //overflow: hidden;
         transition: .3s;
         background-color: rgb(249,248,248);
-        right: 0;
+        right: .6rem;
         top: .9rem;
 
         ul {
@@ -77,7 +77,8 @@ ul,li{
           align-items: flex-start;
           height: 100%;
           padding: 0 .2rem;
-          width: 2rem;
+          width: 100%;
+          overflow: hidden;
 
           li {
             display: flex;
@@ -145,6 +146,7 @@ ul,li{
       .hidden_rigth_display{
         width: 2rem;
         height: 2.5rem;
+        right:0;
       }
       .hidden_rigth:after{
         content: "";
@@ -172,6 +174,48 @@ ul,li{
     .search::placeholder{
       font-size: 14px;
       line-height: 1.5em;
+    }
+
+    .notice_area{
+      width: 100%;
+      padding:.2rem .1rem;
+      background-color: #FFFFFF;
+      box-sizing: border-box;
+
+      .notice_infomation{
+        width: 100%;
+        height: .5rem;
+        display: flex;
+        //outline: 1px solid;
+
+        >img{
+          width: .5rem;
+          height: .5rem;
+          border-radius: 50%;
+
+        }
+
+        .notice_left{
+          flex:1;
+          padding: 0 .1rem;
+
+
+          .notice_information{
+            display: flex;
+            justify-content: space-between;
+
+            .notice_container{
+              font-size: 14px;
+            }
+
+            .send_time{
+              font-size: 12px;
+            }
+
+          }
+        }
+
+      }
     }
   }
 }
