--- a/聊天系统/css/Main.scss
+++ b/聊天系统/css/Main.scss
@@ -138,7 +138,6 @@ ul,li{
               width: 100%;
               height: .8rem;
               border: 1px solid white;
-
             }
           }
         }
@@ -147,6 +146,11 @@ ul,li{
         width: 2rem;
         height: 2.5rem;
         right:0;
+        //overflow: auto;
+
+        ul{
+          overflow: inherit;
+        }
       }
       .hidden_rigth:after{
         content: "";
