--- a/聊天系统/css/Main.css
+++ b/聊天系统/css/Main.css
@@ -52,7 +52,7 @@ ul, li {
         height: 0;
         transition: .3s;
         background-color: #f9f8f8;
-        right: .6rem;
+        right: 0;
         top: .9rem; }
         .out .main .top .hidden_rigth ul {
           display: flex;
@@ -113,8 +113,7 @@ ul, li {
               border: 1px solid white; }
       .out .main .top .hidden_rigth_display {
         width: 2rem;
-        height: 2.5rem;
-        right: 0; }
+        height: 2.5rem; }
         .out .main .top .hidden_rigth_display ul {
           overflow: inherit; }
       .out .main .top .hidden_rigth:after {
@@ -147,7 +146,8 @@ ul, li {
       .out .main .notice_area .notice_infomation {
         width: 100%;
         height: .5rem;
-        display: flex; }
+        display: flex;
+        margin: .1rem 0; }
         .out .main .notice_area .notice_infomation > img {
           width: .5rem;
           height: .5rem;
