--- a/聊天系统/css/Main.scss
+++ b/聊天系统/css/Main.scss
@@ -67,7 +67,7 @@ ul,li{
         //overflow: hidden;
         transition: .3s;
         background-color: rgb(249,248,248);
-        right: .6rem;
+        right: 0;
         top: .9rem;
 
         ul {
@@ -145,7 +145,7 @@ ul,li{
       .hidden_rigth_display{
         width: 2rem;
         height: 2.5rem;
-        right:0;
+        //right:0;
         //overflow: auto;
 
         ul{
@@ -190,6 +190,7 @@ ul,li{
         width: 100%;
         height: .5rem;
         display: flex;
+        margin: .1rem 0;
         //outline: 1px solid;
 
         >img{
