--- a/聊天系统/css/Login.css
+++ b/聊天系统/css/Login.css
@@ -1,14 +1,15 @@
 * {
   margin: 0;
   padding: 0;
-  color: #FFFFFF;
+  color: black;
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; }
 
 button {
   border-style: none; }
 
 a {
-  color: white; }
+  text-decoration: none;
+  color: black; }
 
 .out {
   width: 100vw;
@@ -23,26 +24,18 @@ a {
   background-size: cover;
   background-repeat: no-repeat; }
 
-.Loading_window {
-  padding: .6rem .3rem; }
-
-.top h2 {
-  font-size: .3rem; }
-
-.top i {
-  display: block;
-  font-size: .2rem;
-  margin-bottom: .15rem; }
+.loading_window {
+  padding: 1.8rem .3rem .3rem .3rem; }
 
 .middle {
-  margin: .2rem 0; }
+  margin: .28rem .1rem; }
   .middle .loading {
     width: 100%;
     height: .5rem;
     border-radius: .3rem;
     display: flex;
     align-items: center;
-    background-color: rgba(77, 118, 148, 0.6);
+    background-color: #f2f3f7;
     overflow: hidden; }
   .middle .loading img {
     height: .3rem;
@@ -52,34 +45,37 @@ a {
     width: .4rem;
     margin-left: .05rem; }
   .middle .loading:nth-of-type(2) {
-    margin: .1rem 0 .5rem 0; }
-  .middle .loading:nth-of-type(3) {
+    margin: .1rem 0; }
+  .middle .loading_btn {
     font-size: .3rem;
-    background-color: rgba(213, 222, 228, 0.51);
+    background-image: url(../img/right.png);
     /* text-align: center; */
     justify-content: center;
-    margin-bottom: .1rem; }
+    margin: 0.69rem 1.12rem;
+    width: .7rem;
+    height: .7rem;
+    border-radius: 50%;
+    background-size: cover; }
   .middle .loading input {
     height: 70%;
     background: transparent;
     border: none;
-    color: white;
     outline: none;
     font-size: 21px; }
   .middle .loading input::placeholder {
-    font-size: 16px;
-    color: white; }
+    font-size: 16px; }
   .middle p {
     font-size: .2rem;
     text-align: center; }
 
-.footer a {
-  font-size: .15rem;
-  text-decoration: none; }
-.footer .logo {
-  display: flex; }
-  .footer .logo i {
-    font-size: .25rem;
-    margin-right: .2rem; }
+.footer {
+  font-size: 12px;
+  font-weight: 600;
+  padding: .6rem .2rem 0 .2rem;
+  display: flex;
+  justify-content: center; }
+  .footer span {
+    padding: 0 .3rem;
+    text-align: center; }
 
-/*# sourceMappingURL=%E7%99%BB%E9%99%86%E7%95%8C%E9%9D%A2.css.map */
+/*# sourceMappingURL=Login.css.map */
