--- a/聊天系统/css/Login.scss
+++ b/聊天系统/css/Login.scss
@@ -5,7 +5,7 @@ $browser-default-font-size: 108px;
 * {
   margin: 0;
   padding: 0;
-  color: #FFFFFF;
+  color: black;
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif
 }
 
@@ -13,8 +13,9 @@ button {
   border-style: none; }
 
 a {
-  //text-decoration: none;
-  color: white; }
+  text-decoration: none;
+  color: black;
+}
 .out{
   width: 100vw;
   height: 100vh;
@@ -24,32 +25,28 @@ a {
   box-sizing: border-box;
   width: 100%;
   height:100%;
-  padding: .3rem;
+  padding:.3rem;
   background-image: url(../img/bg.jpg);
   background-size: cover;
   background-repeat: no-repeat;
+
 }
-.Loading_window{
-  padding: .6rem .3rem;
+.loading_window{
+  padding: 1.8rem .3rem .3rem .3rem;
+
   //display: none;
 }
-.top h2{
-  font-size: .3rem;
-}
-.top i{
-  display: block;
-  font-size: .2rem;
-  margin-bottom: .15rem;
-}
+
 .middle{
-  margin: .2rem 0;
+  margin: .28rem .1rem;
+
   .loading{
     width: 100%;
     height: .5rem;
     border-radius: .3rem;
     display: flex;
     align-items: center;
-    background-color: rgba(77, 118, 148, 0.6);
+    background-color: rgb(242,243,247);
     overflow: hidden;
   }
   .loading img{
@@ -64,25 +61,29 @@ a {
   .loading:nth-of-type(2){
     margin: .1rem 0 .5rem 0;
   }
-  .loading:nth-of-type(3){
+  .loading_btn{
     font-size: .3rem;
-    background-color: rgba(213, 222, 228, 0.51);
+    background-image: url(../img/right.png);
     /* text-align: center; */
     justify-content: center;
-    margin-bottom: .1rem;
+    margin: 0.69rem 1.12rem;
+    width: .7rem;
+    height: .7rem;
+    border-radius: 50%;
+    background-size: cover;
   }
 
   .loading input{
     height: 70%;
     background: transparent;
     border: none;
-    color: white;
+    //color: white;
     outline: none;
     font-size: 21px;
   }
   .loading input::placeholder{
     font-size: 16px;
-    color: white;
+    //color: white;
   }
   p{
     font-size: .2rem;
@@ -91,17 +92,16 @@ a {
 }
 
 .footer{
+  font-size: 12px;
+  font-weight: 600;
+  padding: .6rem .2rem 0 .2rem;
+  display: flex;
+  justify-content: center;
 
-  a{
-    font-size: .15rem;
-    text-decoration:none;
-  }
-  .logo{
-    display: flex;
+  span{
+    padding: 0 .3rem;
+    text-align: center;
 
-    i{
-      font-size: .25rem;
-      margin-right: .2rem;
-    }
   }
+
 }
