--- a/聊天系统/css/Main.scss
+++ b/聊天系统/css/Main.scss
@@ -205,7 +205,7 @@ ul,li{
           padding: 0 .1rem;
 
 
-          .notice_information{
+          .notice_information1{
             display: flex;
             justify-content: space-between;
 
