--- a/聊天系统/css/Login.css
+++ b/聊天系统/css/Login.css
@@ -20,7 +20,7 @@ a {
   width: 100%;
   height: 100%;
   padding: .3rem;
-  background-image: url(../img/bg.jpg);
+  background-image: url(../img/bg1.jpg);
   background-size: cover;
   background-repeat: no-repeat; }
 
@@ -42,10 +42,10 @@ a {
     width: .3rem;
     margin: 0 .1rem; }
   .middle .loading:nth-of-type(2) img {
-    width: .4rem;
+    width: .35rem;
     margin-left: .05rem; }
   .middle .loading:nth-of-type(2) {
-    margin: .1rem 0; }
+    margin: .1rem 0 .5rem 0; }
   .middle .loading_btn {
     font-size: .3rem;
     background-image: url(../img/right.png);
@@ -58,6 +58,7 @@ a {
     background-size: cover; }
   .middle .loading input {
     height: 70%;
+    width: 70%;
     background: transparent;
     border: none;
     outline: none;
@@ -69,13 +70,24 @@ a {
     text-align: center; }
 
 .footer {
-  font-size: 12px;
+  font-size: 14px;
   font-weight: 600;
   padding: .6rem .2rem 0 .2rem;
   display: flex;
   justify-content: center; }
   .footer span {
     padding: 0 .3rem;
-    text-align: center; }
+    text-align: center;
+    position: relative; }
+  .footer .forget_password:after {
+    content: "";
+    display: block;
+    position: absolute;
+    width: 1px;
+    right: 0;
+    top: 0;
+    background: #00000054;
+    height: 50%;
+    transform: translateY(50%); }
 
 /*# sourceMappingURL=Login.css.map */
