--- a/聊天系统/css/Login.scss
+++ b/聊天系统/css/Login.scss
@@ -26,7 +26,7 @@ a {
   width: 100%;
   height:100%;
   padding:.3rem;
-  background-image: url(../img/bg.jpg);
+  background-image: url(../img/bg1.jpg);
   background-size: cover;
   background-repeat: no-repeat;
 
@@ -55,7 +55,7 @@ a {
     margin: 0 .1rem;
   }
   .loading:nth-of-type(2) img{
-    width: .4rem;
+    width: .35rem;
     margin-left: .05rem;
   }
   .loading:nth-of-type(2){
@@ -75,6 +75,7 @@ a {
 
   .loading input{
     height: 70%;
+    width: 70%;
     background: transparent;
     border: none;
     //color: white;
@@ -92,7 +93,7 @@ a {
 }
 
 .footer{
-  font-size: 12px;
+  font-size: 14px;
   font-weight: 600;
   padding: .6rem .2rem 0 .2rem;
   display: flex;
@@ -101,7 +102,18 @@ a {
   span{
     padding: 0 .3rem;
     text-align: center;
-
+    position: relative;
+  }
+  .forget_password:after{
+    content: "";
+    display: block;
+    position: absolute;
+    width: 1px;
+    right: 0;
+    top: 0;
+    background: #00000054;
+    height: 50%;
+    transform: translateY(50%);
   }
 
 }
