--- a/聊天系统/css/register.scss
+++ b/聊天系统/css/register.scss
@@ -4,6 +4,17 @@ $browser-default-font-size:108px;
 }
 .register_window{
   display: none;
+
+  .middle{
+    margin:.5rem .1rem;
+
+    .loading:nth-of-type(2){
+      margin:.1rem 0;
+    }
+  }
+  .footer{
+    padding:0;
+  }
 }
 .register_window  h2{
   text-align: center;
@@ -18,11 +29,14 @@ $browser-default-font-size:108px;
 }
 #regist_btn{
   font-size: .4rem;
-  text-align: center;
   display: block;
-  background-color: #c2c3c8;
-  border-radius: .6rem;
-  margin-top: .5rem;
+  background-image: url(../img/正确.png);
+  background-size: 100%;
+  background-position: center;
+  background-repeat: no-repeat;
+  padding: 0;
+  height: .8rem;
+  width: .8rem;
 }
 .top i{
   font-size: .25rem;
