--- a/聊天系统/css/personal_homepage.css
+++ b/聊天系统/css/personal_homepage.css
@@ -8,7 +8,7 @@
     /* background-color: gold; */
     height: 100%;
     width: 100%;
-    background: url("../img/winxp.jpg") no-repeat;
+    background: url("../img/avatar_bg.png") no-repeat;
     background-size:cover;
 }
 
@@ -24,14 +24,14 @@ body {
     position: absolute;
     transition: all .3s linear;
     font-size: medium;
-    /* left: -100%; */
+    left: -100%;
 }
 
 .left_le {
     width: 70%;
     height: 100%;
-    border-right: 1px solid;
-    background-color: white;
+    border-right: 1px solid gray;
+    background-color: #f9f8f8;
 }
 
 .left_ri {
@@ -45,34 +45,42 @@ body {
 
 .left_top{
     width: 100%;
-    height: 30%;
+    height: 20%;
     border-bottom: 1px solid;
 }
 
 #avatar{
     position: relative;
-    top: 60px;
-    margin-left: 20px;
+    /* margin-left: 20px; */
+    width: .7rem;
+    height: .7rem;
+    border-radius: 50%;
+    border: 2px solid #f9f8f8;
+    background-color: white;
+}
+
+#avatar2{
+    position: relative;
+    top: 30px;
+    left: 35%;
     width: 70px;
     height: 70px;
     border-radius: 50%;
+    background-color: white;
     border: 2px solid white;
 }
 
 .backg ul{
-    color: white;
+    color: #f9f8f8;
     font-size: 16px;
-    margin-left: 110px;
-    margin-top: -35px;
-}
-
-.backg ul li:nth-of-type(1){
-    font-size: 20px;
+    /* margin-left: 90px;
+    margin-top: 25px; */
+    position: relative;
 }
 
 .left_bottom{
     width: 99%;
-    height: 70%;
+    height: 75%;
 }
 
 .left_bottom ul{
@@ -82,8 +90,9 @@ body {
 
 .left_bottom ul li{
     height: 30px;
-    background-color: white;
+    background-color: #f9f8f8;
     line-height: 30px;
+    margin-top: 15px;
     /* border: 1px solid; */
 }
 .left_bottom ul li img:nth-of-type(2){
@@ -103,5 +112,61 @@ body {
 }
 
 .left_bottom ul li:nth-of-type(1){
+    margin-top: 30px;
+}
+
+.change_avatar{
+    background-color: #f9f8f8;
+    position: absolute;
+    top: 21%;
+    width: 70%;
+    height: 50%;
+    display: none;
+    border-right: 0;
+    border-left: 0;
+}
+
+#btn_file{
+    width: 100%;
+    border: 1px solid;
+    border-right: 0;
+    border-left: 0;
+    margin-top: 50px;
+}
+
+#btn_submit{
+    border: 0;
+    background-color: #00aaff;
+    width: 100%;
+    height: 30px;
     margin-top: 10px;
+    color: white;
+}
+
+.login_out{
+    position: absolute;
+    bottom: 10px;
+    left: 10px;
+}
+
+#log_out{
+    width: 30px;
+    height: 30px;
+}
+
+.login_out_slider{
+    position: absolute;
+    width: 70%;
+    height: 50px;
+    bottom: 50px;
+    background-color: white;
+}
+
+.sanjiao{
+    position: absolute;
+    bottom: 40px;
+    left: 30px;
+    border: 10px solid green;
+    width: 0px;
+    height: 0px;
 }
