--- a/聊天系统/css/Main.css
+++ b/聊天系统/css/Main.css
@@ -11,8 +11,16 @@ ul, li {
 @font-face {
   font-family: 'iconfont';
   /* project id 1898437 */
-  src: url("//at.alicdn.com/t/font_1898437_izt0yre64fj.eot");
-  src: url("//at.alicdn.com/t/font_1898437_izt0yre64fj.eot?#iefix") format("embedded-opentype"), url("//at.alicdn.com/t/font_1898437_izt0yre64fj.woff2") format("woff2"), url("//at.alicdn.com/t/font_1898437_izt0yre64fj.woff") format("woff"), url("//at.alicdn.com/t/font_1898437_izt0yre64fj.ttf") format("truetype"), url("//at.alicdn.com/t/font_1898437_izt0yre64fj.svg#iconfont") format("svg"); }
+  src: url("../font_1898437_g0xkwswgnzm/iconfont.eot");
+  src: url("../font_1898437_g0xkwswgnzm/iconfont.eot?#iefix") format("embedded-opentype"), url("../font_1898437_g0xkwswgnzm/iconfont.woff2") format("woff2"), url("../font_1898437_g0xkwswgnzm/iconfont.woff") format("woff"), url("../font_1898437_g0xkwswgnzm/iconfont.ttf") format("truetype"), url("../font_1898437_g0xkwswgnzm/iconfont.svg#iconfont") format("svg"); }
+.iconfont {
+  font-family: "iconfont" !important;
+  font-size: 16px;
+  font-style: normal;
+  -webkit-font-smoothing: antialiased;
+  -webkit-text-stroke-width: 0.2px;
+  -moz-osx-font-smoothing: grayscale; }
+
 .out {
   width: 100vw;
   min-height: 100vh;
