--- a/聊天系统/css/personal_homepage.css
+++ b/聊天系统/css/personal_homepage.css
@@ -25,6 +25,7 @@ body {
     transition: all .3s linear;
     font-size: medium;
     left: -100%;
+    overflow: hidden;
 }
 
 .left_le {
@@ -143,22 +144,16 @@ body {
     color: white;
 }
 
-.login_out{
-    position: absolute;
-    bottom: 10px;
-    left: 10px;
-}
-
-#log_out{
-    width: 30px;
-    height: 30px;
-}
-
 .login_out_slider{
     position: absolute;
-    display: none;
     width: 70%;
     height: 50px;
-    bottom: 50px;
+    bottom: 0px;
     background-color: #e6e6e6;
+    text-align: center;
+    line-height: 50px;
+}
+
+.login_out_slider:hover{
+    background-color: tomato;
 }
