--- a/聊天系统/css/friendsStyle.css
+++ b/聊天系统/css/friendsStyle.css
@@ -26,7 +26,19 @@
     height:29%;
     /* background-color: darkviolet; */
     position: absolute;
+    bottom: 15px;
     margin:3px 5px;
+}
+#header span{
+    width:50px!important;
+    height:29%;
+    color: white;
+    font-size: 1rem;
+    display: inline-block;
+    position: absolute;
+    bottom:15px;
+    left:50%;
+    transform: translateX(-50%);
 }
 #headPortrait img{
     width:100%;
@@ -46,7 +58,7 @@
     height:29%;
     /* background-color: rgb(0, 211, 81); */
     position: absolute;
-    top:0;
+    bottom:15px;
     right:0;
 }
 #header #addFriends img{
@@ -72,6 +84,28 @@
     top:15%;
     overflow: hidden;
 }
+#content #newFriends{
+    width:100%;
+    height:20%;
+    /* background-color: lawngreen; */
+    border-bottom: 1px solid gray;
+    box-shadow: gray;
+    text-align: left;
+    font-size: 1.5em;
+    padding-left:10px;
+    position: absolute;
+    display: flex;
+    box-sizing: border-box;
+    align-items: center;
+}
+#content #newFriends img{
+    float: right;
+    width:10%;
+    height:50%;
+    position: absolute;
+    right:0;
+    opacity: 0.5;
+}
 #content #classification{
     width:90%;
     height:10%;
@@ -90,20 +124,28 @@
     height: 90%;
     /* background-color: gold; */
     position: absolute;
-    top:10%;
+    top:20%;
 }
 #content #friendsUl .friends{
     width:100%;
-    height:10%;
+    height:15%;
     position: relative;
-    /* margin-bottom: 5px; */
+    margin-bottom: 5px;
+}
+#content #friendsUl .friends .Logo{
+    width:20%;
+    height:100%;
+    object-fit:contain;
+    margin-left:0;
+    /* background-color: lawngreen; */
+    display: inline-block;
 }
 #content #friendsUl .friends img{
-    width:38.33px;
-    height:38.33px;
+    width:100%;
+    height:100%;
     object-fit:contain;
     border-radius: 50%;
-    margin-left:5%;
+    margin-left:0;
 }
 /* #content #friendsUl .friends .Logo{
     width:38.33px;
@@ -116,7 +158,7 @@
 #content #friendsUl .friends .nickname{
     width:80%;
     height:50%;
-    font-size: 1rem;
+    font-size: 1.5rem;
     font-weight: 300;
     display: inline-block;
     position: absolute;
@@ -127,20 +169,19 @@
 #content #friendsUl .friends .signature{
     width:80%;
     height:50%;
-    font-size: 0.5rem;
+    font-size: 1rem;
     font-weight: 200;
     display: inline-block;
     position: absolute;
     top:50%;
-    right:0;
 }
 #content #friendsUl .friends .delete{
     width:30%;
     height:100%;
-    background-color:#00CED1;
-    border:1px solid #00CED1;
+    background-color:red;
     border-radius: 5px;
-    color: red;
+    color: white;
+    font-size: 1.5rem;
     position: absolute;
     top:0;
     right:0;
