--- a/聊天系统/css/Main.scss
+++ b/聊天系统/css/Main.scss
@@ -59,6 +59,7 @@ ul,li{
         float:right;
         margin-top: .4rem;
         margin-right: .1rem;
+        color: #FFFFFF;
         //transition: .3s;
       }
       .shizi_isclicked{
