--- a/聊天系统/css/Main.css
+++ b/聊天系统/css/Main.css
@@ -50,7 +50,8 @@ ul, li {
         font-size: .2rem;
         float: right;
         margin-top: .4rem;
-        margin-right: .1rem; }
+        margin-right: .1rem;
+        color: #FFFFFF; }
       .out .main .top .shizi_isclicked {
         transition: .3s;
         transform: rotate(45deg); }
